Fix: users information in the card is not visible

--- a/src/components/Card/styles.module.css
+++ b/src/components/Card/styles.module.css
@@ -145,6 +145,7 @@
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
+  z-index: 3;
 }
 
 /* Allow child elements to be interactive but prevent text selection */
